tests/snapshots/integration__integration_tests__shell_wrapper__unix_tests__bash_shell_integration_hint_suppressed.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: "&output.combined"
---

[32m✓[39m [32mCreated branch [1mbash-test[22m from [1mmain[22m and worktree @ [1m_REPO_.bash-test[22m[39m
[2m↳[22m [2mTo customize worktree locations, run [4mwt config create[24m[22m
[0m
