tests/snapshots/integration__integration_tests__shell_wrapper__unix_tests__command_failure.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: "&output.combined"
---

[31m✗[39m [31mBranch [1mexisting[22m already exists[39m
[2m↳[22m [2mIf its setup didn't finish, run [4mwt -C _REPO_.existing hook pre-start[24m first; to switch to the existing branch, run without [4m--create[24m: [4mwt switch existing[24m[22m
[0m
