tests/snapshots/integration__integration_tests__shell_wrapper__unix_tests__fish_multiline_command_execution.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: "&output.combined"
---

[32m✓[39m [32mCreated branch [1mfish-multiline[22m from [1mmain[22m and worktree @ [1m_REPO_.fish-multiline[22m[39m
[2m↳[22m [2mTo customize worktree locations, run [4mwt config create[24m[22m
[36m◎[39m [36mExecuting (--execute):[39m
[107m [0m [2m[0m[2m[34mfish[0m[2m [0m[2m[36m-c[0m[2m [0m[2m[32m'echo '[0m[2m\'[0m[2m[32m'line 1'[0m[2m\'[0m[2m[32m'; echo '[0m[2m\'[0m[2m[32m'line 2'[0m[2m\'[0m[2m[32m'; echo '[0m[2m\'[0m[2m[32m'line 3'[0m[2m\'[0m[2m[32m''[0m
line 1
line 2
line 3
[0m
