tests/snapshots/integration__integration_tests__shell_wrapper__unix_tests__fish_wrapper_handles_empty_chunks.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: "&output.combined"
---

[32m✓[39m [32mCreated branch [1mfish-minimal[22m from [1mmain[22m and worktree @ [1m_REPO_.fish-minimal[22m[39m
[2m↳[22m [2mTo customize worktree locations, run [4mwt config create[24m[22m
[0m
