tests/snapshots/integration__integration_tests__shell_wrapper__unix_tests__merge.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: "&output.combined"
---

[2m○[22m Already up to date with [1mmain[22m (no new commits, no rebase needed)
[2m○[22m Worktree preserved (already on target branch)
[0m
