tests/snapshots/integration__integration_tests__shell_wrapper__unix_tests__merge_with_pre_merge_failure_bash.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: "&output.combined"
---

[36m◎[39m [36mRunning pre-merge [1mproject:format[22m[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'✓ Code formatting check passed'[0m
[0m✓ Code formatting check passed
[36m◎[39m [36mRunning pre-merge [1mproject:test[22m[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'✗ Test suite failed: 3 tests failing'[0m[2m [0m[2m[36m&&[0m[2m [0m[2m[34mexit[0m[2m 1[0m
[0m✗ Test suite failed: 3 tests failing
[31m✗[39m [31m[1mpre-merge project:test[22m failed (exit code 1)[39m
[2m↳[22m [2mTo skip pre-merge hooks, re-run with [4m--no-hooks[24m[22m
[0m
